<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#383842"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#303237"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/todo"
            app:srcCompat="?attr/homeAsUpIndicator"
            tools:srcCompat="?attr/homeAsUpIndicator" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:text="@string/heading"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:background="#212326"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:src="@drawable/image1" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/main"
            android:textColor="#E0E0E0"
            android:textSize="10sp" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:text="@string/ms1"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:text="@string/msg2"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:text="@string/msg3"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/msg4"
                android:gravity="center_vertical"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/msg5"
                android:gravity="center_vertical"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_alignParentEnd="true">

            <RadioButton
                android:id="@+id/radiobutton1"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:buttonTint="@color/white"
                android:layout_alignParentEnd="true"/>

            <RadioButton
                android:id="@+id/radiobutton2"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:buttonTint="@color/white"
                android:layout_alignParentEnd="true"/>

            <RadioButton
                android:id="@+id/radiobutton3"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:buttonTint="@color/white"
                android:layout_alignParentEnd="true"/>

            <RadioButton
                android:id="@+id/radiobutton4"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:buttonTint="@color/white"
                android:layout_alignParentEnd="true"/>

            <RadioButton
                android:id="@+id/radiobutton5"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:buttonTint="@color/white"
                android:layout_alignParentEnd="true"/>

        </RadioGroup>

    </RelativeLayout>
</LinearLayout>